scripts/nullaway/annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8.txt
../annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8/src/bytecast/interp/test/BytecastInterpTest.java:35: error: [NullAway] enhanced-for expression m_testCases is @Nullable
    for(TestCase test_case : m_testCases){
                             ^
    (see http://t.uber.com/nullaway )
../annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8/src/edu/syr/bytecast/interp/amd64/Memory.java:59: error: [NullAway] unboxing of a @Nullable value
            long shifted_val = (mask & byte_val) << (i*8);
                                       ^
    (see http://t.uber.com/nullaway )
../annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8/src/edu/syr/bytecast/interp/amd64/AMD64ExecutionEngine.java:44: error: [NullAway] @NonNull field m_env not initialized
    AMD64Environment m_env;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8/src/edu/syr/bytecast/interp/amd64/AMD64ExecutionEngine.java:159: error: [NullAway] dereferenced expression m_instructions.get(curr_inst_type) is @Nullable
                jump_addr = m_instructions.get(curr_inst_type).execute(m_env, curr_inst);
                                                              ^
    (see http://t.uber.com/nullaway )
../annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8/src/edu/syr/bytecast/interp/amd64/RegisterBank.java:166: error: [NullAway] dereferenced expression m_naturalRegs.get(overlay.ParentRegisterName) is @Nullable
            m_naturalRegs.get(overlay.ParentRegisterName).setValue(value, overlay.MSB, overlay.LSB);
                                                         ^
    (see http://t.uber.com/nullaway )
../annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8/src/edu/syr/bytecast/interp/amd64/RegisterBank.java:179: error: [NullAway] dereferenced expression m_naturalRegs.get(overlay.ParentRegisterName) is @Nullable
        long value = m_naturalRegs.get(overlay.ParentRegisterName).getValue(overlay.MSB, overlay.LSB); 
                                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8/src/edu/syr/bytecast/interp/amd64/RegisterBank.java:179: error: [NullAway] dereferenced expression overlay is @Nullable
        long value = m_naturalRegs.get(overlay.ParentRegisterName).getValue(overlay.MSB, overlay.LSB); 
                                              ^
    (see http://t.uber.com/nullaway )
../annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8/src/edu/syr/bytecast/interp/amd64/RegisterBank.java:194: error: [NullAway] dereferenced expression overlay is @Nullable
        return (overlay.MSB - overlay.LSB + 1)/8;
                       ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/urldec84b8592_pcpratts_git_bisect_lab_tgz-pJ8-edu_syr_bytecast_interp_amd64_AMD64ExecutionEngineJ8/src/edu/syr/bytecast/interp/amd64/AMD64ExecutionEngine.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors
